REFORMED/RDFGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from RDFGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Expr                           (0)
	Expr -> SELECT Selectors FROM FileList WHERE Comparators   (1)
	Expr -> SELECT Selectors FROM FileList             (2)
	Expr -> '(' Expr ')'                               (3)
	Selectors -> '*'                                   (4)
	Selectors -> filename '.' SUB                      (5)
	Selectors -> filename '.' PRED                     (6)
	Selectors -> filename '.' OBJ                      (7)
	Selectors -> Selectors ',' Selectors               (8)
	FileList -> filename                               (9)
	FileList -> filename ',' FileList                  (10)
	Comparators -> Expr AND Expr                       (11)
	Comparators -> Expr OR Expr                        (12)
	Comparators -> Expr TYPE Type                      (13)
	Comparators -> IF '(' Expr ',' Expr ',' Expr ')'   (14)
	Comparators -> REPLACE '(' Expr "->" Expr ')'      (15)
	Comparators -> TRIPLE                              (16)
	Comparators -> SUB                                 (17)
	Comparators -> PRED                                (18)
	Comparators -> OBJ                                 (19)
	Comparators -> true                                (20)
	Comparators -> false                               (21)
	Comparators -> int                                 (22)
	Comparators -> str                                 (23)
	Comparators -> filename '.' SUB                    (24)
	Comparators -> filename '.' PRED                   (25)
	Comparators -> filename '.' OBJ                    (26)
	Comparators -> Comparators '>' Comparators         (27)
	Comparators -> Comparators '<' Comparators         (28)
	Comparators -> Comparators '=' Comparators         (29)
	Comparators -> Comparators "!=" Comparators        (30)
	Comparators -> Comparators "<=" Comparators        (31)
	Comparators -> Comparators ">=" Comparators        (32)
	Comparators -> Comparators ',' Comparators         (33)
	Comparators -> Comparators '+' Comparators         (34)
	Comparators -> Comparators '-' Comparators         (35)
	Comparators -> Comparators '/' Comparators         (36)
	Comparators -> Comparators 'x' Comparators         (37)
	Comparators -> '(' Comparators ')'                 (38)
	Type -> Bool                                       (39)
	Type -> Int                                        (40)
	Type -> String                                     (41)
	Type -> Triple                                     (42)
	Type -> Sub                                        (43)
	Type -> Pred                                       (44)
	Type -> Obj                                        (45)
	Type -> Filename                                   (46)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Bool           { TokenTypeBool _ }
	Int            { TokenTypeInt _ }
	String         { TokenTypeString _ }
	Triple         { TokenTypeTriple _ }
	Sub            { TokenTypeSub _ }
	Pred           { TokenTypePred _ }
	Obj            { TokenTypeObj _ }
	Filename       { TokenTypeFile _ }
	SELECT         { TokenSelect _ }
	FROM           { TokenFrom _ }
	WHERE          { TokenWhere _ }
	AND            { TokenAnd _ }
	OR             { TokenOr _ }
	TYPE           { TokenType _ }
	IF             { TokenIf _ }
	REPLACE        { TokenReplace _ }
	TRIPLE         { TokenTriple _ }
	SUB            { TokenSubs _ }
	PRED           { TokenPreds _ }
	OBJ            { TokenObjs _ }
	filename       { TokenFilename _ $$ }
	true           { TokenTrue _ }
	false          { TokenFalse _ }
	int            { TokenIntLiteral _ $$ }
	str            { TokenStringLiteral _ $$ }
	'*'            { TokenAsterisks _ }
	','            { TokenComma _ }
	'.'            { TokenFullStop _ }
	'('            { TokenLeftBracket _ }
	')'            { TokenRightBracket _ }
	"->"           { TokenArrow _ }
	'>'            { TokenGreaterThan _ }
	'<'            { TokenLessThan _ }
	'='            { TokenEqual _ }
	"!="           { TokenNotEqual _ }
	">="           { TokenGreaterOrEqual _ }
	"<="           { TokenLessOrEqual _ }
	'+'            { TokenPlusSign _ }
	'-'            { TokenMinusSign _ }
	'/'            { TokenDivSign _ }
	'x'            { TokenMultSign _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Expr            rules 1, 2, 3
	Selectors       rules 4, 5, 6, 7, 8
	FileList        rules 9, 10
	Comparators     rules 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38
	Type            rules 39, 40, 41, 42, 43, 44, 45, 46

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Expr                          (rule 0)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 3

State 1

	Expr -> . SELECT Selectors FROM FileList WHERE Comparators    (rule 1)

	SELECT         shift, and enter state 2


State 2

	Expr -> SELECT . Selectors FROM FileList WHERE Comparators    (rule 1)

	filename       shift, and enter state 8
	'*'            shift, and enter state 9

	Selectors      goto state 10

State 3

	%start_parseCalc -> Expr .                          (rule 0)

	%eof           accept


State 4

	Expr -> SELECT . Selectors FROM FileList WHERE Comparators    (rule 1)
	Expr -> SELECT . Selectors FROM FileList            (rule 2)

	filename       shift, and enter state 8
	'*'            shift, and enter state 9

	Selectors      goto state 7

State 5

	Expr -> '(' . Expr ')'                              (rule 3)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 6

State 6

	Expr -> '(' Expr . ')'                              (rule 3)

	')'            shift, and enter state 15


State 7

	Expr -> SELECT Selectors . FROM FileList WHERE Comparators    (rule 1)
	Expr -> SELECT Selectors . FROM FileList            (rule 2)
	Selectors -> Selectors . ',' Selectors              (rule 8)

	FROM           shift, and enter state 14
	','            shift, and enter state 12


State 8

	Selectors -> filename . '.' SUB                     (rule 5)
	Selectors -> filename . '.' PRED                    (rule 6)
	Selectors -> filename . '.' OBJ                     (rule 7)

	'.'            shift, and enter state 13


State 9

	Selectors -> '*' .                                  (rule 4)

	FROM           reduce using rule 4
	','            reduce using rule 4


State 10

	Expr -> SELECT Selectors . FROM FileList WHERE Comparators    (rule 1)
	Selectors -> Selectors . ',' Selectors              (rule 8)

	FROM           shift, and enter state 11
	','            shift, and enter state 12


State 11

	Expr -> SELECT Selectors FROM . FileList WHERE Comparators    (rule 1)

	filename       shift, and enter state 17

	FileList       goto state 22

State 12

	Selectors -> Selectors ',' . Selectors              (rule 8)

	filename       shift, and enter state 8
	'*'            shift, and enter state 9

	Selectors      goto state 21

State 13

	Selectors -> filename '.' . SUB                     (rule 5)
	Selectors -> filename '.' . PRED                    (rule 6)
	Selectors -> filename '.' . OBJ                     (rule 7)

	SUB            shift, and enter state 18
	PRED           shift, and enter state 19
	OBJ            shift, and enter state 20


State 14

	Expr -> SELECT Selectors FROM . FileList WHERE Comparators    (rule 1)
	Expr -> SELECT Selectors FROM . FileList            (rule 2)

	filename       shift, and enter state 17

	FileList       goto state 16

State 15

	Expr -> '(' Expr ')' .                              (rule 3)

	AND            reduce using rule 3
	OR             reduce using rule 3
	TYPE           reduce using rule 3
	','            reduce using rule 3
	')'            reduce using rule 3
	"->"           reduce using rule 3
	'>'            reduce using rule 3
	'<'            reduce using rule 3
	'='            reduce using rule 3
	"!="           reduce using rule 3
	">="           reduce using rule 3
	"<="           reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'x'            reduce using rule 3
	%eof           reduce using rule 3


State 16

	Expr -> SELECT Selectors FROM FileList . WHERE Comparators    (rule 1)
	Expr -> SELECT Selectors FROM FileList .            (rule 2)

	WHERE          shift, and enter state 23
	AND            reduce using rule 2
	OR             reduce using rule 2
	TYPE           reduce using rule 2
	','            reduce using rule 2
	')'            reduce using rule 2
	"->"           reduce using rule 2
	'>'            reduce using rule 2
	'<'            reduce using rule 2
	'='            reduce using rule 2
	"!="           reduce using rule 2
	">="           reduce using rule 2
	"<="           reduce using rule 2
	'+'            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	'x'            reduce using rule 2
	%eof           reduce using rule 2


State 17

	FileList -> filename .                              (rule 9)
	FileList -> filename . ',' FileList                 (rule 10)

	WHERE          reduce using rule 9
	AND            reduce using rule 9
	OR             reduce using rule 9
	TYPE           reduce using rule 9
	','            shift, and enter state 24
	')'            reduce using rule 9
	"->"           reduce using rule 9
	'>'            reduce using rule 9
	'<'            reduce using rule 9
	'='            reduce using rule 9
	"!="           reduce using rule 9
	">="           reduce using rule 9
	"<="           reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'/'            reduce using rule 9
	'x'            reduce using rule 9
	%eof           reduce using rule 9


State 18

	Selectors -> filename '.' SUB .                     (rule 5)

	FROM           reduce using rule 5
	','            reduce using rule 5


State 19

	Selectors -> filename '.' PRED .                    (rule 6)

	FROM           reduce using rule 6
	','            reduce using rule 6


State 20

	Selectors -> filename '.' OBJ .                     (rule 7)

	FROM           reduce using rule 7
	','            reduce using rule 7


State 21

	Selectors -> Selectors . ',' Selectors              (rule 8)
	Selectors -> Selectors ',' Selectors .              (rule 8)

	FROM           reduce using rule 8
	','            reduce using rule 8


State 22

	Expr -> SELECT Selectors FROM FileList . WHERE Comparators    (rule 1)

	WHERE          shift, and enter state 23


State 23

	Expr -> SELECT Selectors FROM FileList WHERE . Comparators    (rule 1)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 27

State 24

	FileList -> filename ',' . FileList                 (rule 10)

	filename       shift, and enter state 17

	FileList       goto state 25

State 25

	FileList -> filename ',' FileList .                 (rule 10)

	WHERE          reduce using rule 10
	AND            reduce using rule 10
	OR             reduce using rule 10
	TYPE           reduce using rule 10
	','            reduce using rule 10
	')'            reduce using rule 10
	"->"           reduce using rule 10
	'>'            reduce using rule 10
	'<'            reduce using rule 10
	'='            reduce using rule 10
	"!="           reduce using rule 10
	">="           reduce using rule 10
	"<="           reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	'x'            reduce using rule 10
	%eof           reduce using rule 10


State 26

	Comparators -> Expr . AND Expr                      (rule 11)
	Comparators -> Expr . OR Expr                       (rule 12)
	Comparators -> Expr . TYPE Type                     (rule 13)

	AND            shift, and enter state 56
	OR             shift, and enter state 57
	TYPE           shift, and enter state 58


State 27

	Expr -> SELECT Selectors FROM FileList WHERE Comparators .    (rule 1)
	Comparators -> Comparators . '>' Comparators        (rule 27)
	Comparators -> Comparators . '<' Comparators        (rule 28)
	Comparators -> Comparators . '=' Comparators        (rule 29)
	Comparators -> Comparators . "!=" Comparators       (rule 30)
	Comparators -> Comparators . "<=" Comparators       (rule 31)
	Comparators -> Comparators . ">=" Comparators       (rule 32)
	Comparators -> Comparators . ',' Comparators        (rule 33)
	Comparators -> Comparators . '+' Comparators        (rule 34)
	Comparators -> Comparators . '-' Comparators        (rule 35)
	Comparators -> Comparators . '/' Comparators        (rule 36)
	Comparators -> Comparators . 'x' Comparators        (rule 37)

	AND            reduce using rule 1
	OR             reduce using rule 1
	TYPE           reduce using rule 1
	','            shift, and enter state 45
	')'            reduce using rule 1
	"->"           reduce using rule 1
	'>'            shift, and enter state 46
	'<'            shift, and enter state 47
	'='            shift, and enter state 48
	"!="           shift, and enter state 49
	">="           shift, and enter state 50
	"<="           shift, and enter state 51
	'+'            shift, and enter state 52
	'-'            shift, and enter state 53
	'/'            shift, and enter state 54
	'x'            shift, and enter state 55
	%eof           reduce using rule 1


State 28

	Comparators -> IF . '(' Expr ',' Expr ',' Expr ')'    (rule 14)

	'('            shift, and enter state 44


State 29

	Comparators -> REPLACE . '(' Expr "->" Expr ')'     (rule 15)

	'('            shift, and enter state 43


State 30

	Comparators -> TRIPLE .                             (rule 16)

	AND            reduce using rule 16
	OR             reduce using rule 16
	TYPE           reduce using rule 16
	','            reduce using rule 16
	')'            reduce using rule 16
	"->"           reduce using rule 16
	'>'            reduce using rule 16
	'<'            reduce using rule 16
	'='            reduce using rule 16
	"!="           reduce using rule 16
	">="           reduce using rule 16
	"<="           reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	'x'            reduce using rule 16
	%eof           reduce using rule 16


State 31

	Comparators -> SUB .                                (rule 17)

	AND            reduce using rule 17
	OR             reduce using rule 17
	TYPE           reduce using rule 17
	','            reduce using rule 17
	')'            reduce using rule 17
	"->"           reduce using rule 17
	'>'            reduce using rule 17
	'<'            reduce using rule 17
	'='            reduce using rule 17
	"!="           reduce using rule 17
	">="           reduce using rule 17
	"<="           reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	'x'            reduce using rule 17
	%eof           reduce using rule 17


State 32

	Comparators -> PRED .                               (rule 18)

	AND            reduce using rule 18
	OR             reduce using rule 18
	TYPE           reduce using rule 18
	','            reduce using rule 18
	')'            reduce using rule 18
	"->"           reduce using rule 18
	'>'            reduce using rule 18
	'<'            reduce using rule 18
	'='            reduce using rule 18
	"!="           reduce using rule 18
	">="           reduce using rule 18
	"<="           reduce using rule 18
	'+'            reduce using rule 18
	'-'            reduce using rule 18
	'/'            reduce using rule 18
	'x'            reduce using rule 18
	%eof           reduce using rule 18


State 33

	Comparators -> OBJ .                                (rule 19)

	AND            reduce using rule 19
	OR             reduce using rule 19
	TYPE           reduce using rule 19
	','            reduce using rule 19
	')'            reduce using rule 19
	"->"           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	'='            reduce using rule 19
	"!="           reduce using rule 19
	">="           reduce using rule 19
	"<="           reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	'x'            reduce using rule 19
	%eof           reduce using rule 19


State 34

	Comparators -> filename . '.' SUB                   (rule 24)
	Comparators -> filename . '.' PRED                  (rule 25)
	Comparators -> filename . '.' OBJ                   (rule 26)

	'.'            shift, and enter state 42


State 35

	Comparators -> true .                               (rule 20)

	AND            reduce using rule 20
	OR             reduce using rule 20
	TYPE           reduce using rule 20
	','            reduce using rule 20
	')'            reduce using rule 20
	"->"           reduce using rule 20
	'>'            reduce using rule 20
	'<'            reduce using rule 20
	'='            reduce using rule 20
	"!="           reduce using rule 20
	">="           reduce using rule 20
	"<="           reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	'x'            reduce using rule 20
	%eof           reduce using rule 20


State 36

	Comparators -> false .                              (rule 21)

	AND            reduce using rule 21
	OR             reduce using rule 21
	TYPE           reduce using rule 21
	','            reduce using rule 21
	')'            reduce using rule 21
	"->"           reduce using rule 21
	'>'            reduce using rule 21
	'<'            reduce using rule 21
	'='            reduce using rule 21
	"!="           reduce using rule 21
	">="           reduce using rule 21
	"<="           reduce using rule 21
	'+'            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	'x'            reduce using rule 21
	%eof           reduce using rule 21


State 37

	Comparators -> int .                                (rule 22)

	AND            reduce using rule 22
	OR             reduce using rule 22
	TYPE           reduce using rule 22
	','            reduce using rule 22
	')'            reduce using rule 22
	"->"           reduce using rule 22
	'>'            reduce using rule 22
	'<'            reduce using rule 22
	'='            reduce using rule 22
	"!="           reduce using rule 22
	">="           reduce using rule 22
	"<="           reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'/'            reduce using rule 22
	'x'            reduce using rule 22
	%eof           reduce using rule 22


State 38

	Comparators -> str .                                (rule 23)

	AND            reduce using rule 23
	OR             reduce using rule 23
	TYPE           reduce using rule 23
	','            reduce using rule 23
	')'            reduce using rule 23
	"->"           reduce using rule 23
	'>'            reduce using rule 23
	'<'            reduce using rule 23
	'='            reduce using rule 23
	"!="           reduce using rule 23
	">="           reduce using rule 23
	"<="           reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'/'            reduce using rule 23
	'x'            reduce using rule 23
	%eof           reduce using rule 23


State 39

	Expr -> '(' . Expr ')'                              (rule 3)
	Comparators -> '(' . Comparators ')'                (rule 38)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 40
	Comparators    goto state 41

State 40

	Expr -> '(' Expr . ')'                              (rule 3)
	Comparators -> Expr . AND Expr                      (rule 11)
	Comparators -> Expr . OR Expr                       (rule 12)
	Comparators -> Expr . TYPE Type                     (rule 13)

	AND            shift, and enter state 56
	OR             shift, and enter state 57
	TYPE           shift, and enter state 58
	')'            shift, and enter state 15


State 41

	Comparators -> Comparators . '>' Comparators        (rule 27)
	Comparators -> Comparators . '<' Comparators        (rule 28)
	Comparators -> Comparators . '=' Comparators        (rule 29)
	Comparators -> Comparators . "!=" Comparators       (rule 30)
	Comparators -> Comparators . "<=" Comparators       (rule 31)
	Comparators -> Comparators . ">=" Comparators       (rule 32)
	Comparators -> Comparators . ',' Comparators        (rule 33)
	Comparators -> Comparators . '+' Comparators        (rule 34)
	Comparators -> Comparators . '-' Comparators        (rule 35)
	Comparators -> Comparators . '/' Comparators        (rule 36)
	Comparators -> Comparators . 'x' Comparators        (rule 37)
	Comparators -> '(' Comparators . ')'                (rule 38)

	','            shift, and enter state 45
	')'            shift, and enter state 86
	'>'            shift, and enter state 46
	'<'            shift, and enter state 47
	'='            shift, and enter state 48
	"!="           shift, and enter state 49
	">="           shift, and enter state 50
	"<="           shift, and enter state 51
	'+'            shift, and enter state 52
	'-'            shift, and enter state 53
	'/'            shift, and enter state 54
	'x'            shift, and enter state 55


State 42

	Comparators -> filename '.' . SUB                   (rule 24)
	Comparators -> filename '.' . PRED                  (rule 25)
	Comparators -> filename '.' . OBJ                   (rule 26)

	SUB            shift, and enter state 83
	PRED           shift, and enter state 84
	OBJ            shift, and enter state 85


State 43

	Comparators -> REPLACE '(' . Expr "->" Expr ')'     (rule 15)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 82

State 44

	Comparators -> IF '(' . Expr ',' Expr ',' Expr ')'    (rule 14)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 81

State 45

	Comparators -> Comparators ',' . Comparators        (rule 33)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 80

State 46

	Comparators -> Comparators '>' . Comparators        (rule 27)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 79

State 47

	Comparators -> Comparators '<' . Comparators        (rule 28)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 78

State 48

	Comparators -> Comparators '=' . Comparators        (rule 29)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 77

State 49

	Comparators -> Comparators "!=" . Comparators       (rule 30)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 76

State 50

	Comparators -> Comparators ">=" . Comparators       (rule 32)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 75

State 51

	Comparators -> Comparators "<=" . Comparators       (rule 31)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 74

State 52

	Comparators -> Comparators '+' . Comparators        (rule 34)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 73

State 53

	Comparators -> Comparators '-' . Comparators        (rule 35)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 72

State 54

	Comparators -> Comparators '/' . Comparators        (rule 36)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 71

State 55

	Comparators -> Comparators 'x' . Comparators        (rule 37)

	SELECT         shift, and enter state 4
	IF             shift, and enter state 28
	REPLACE        shift, and enter state 29
	TRIPLE         shift, and enter state 30
	SUB            shift, and enter state 31
	PRED           shift, and enter state 32
	OBJ            shift, and enter state 33
	filename       shift, and enter state 34
	true           shift, and enter state 35
	false          shift, and enter state 36
	int            shift, and enter state 37
	str            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 26
	Comparators    goto state 70

State 56

	Comparators -> Expr AND . Expr                      (rule 11)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 69

State 57

	Comparators -> Expr OR . Expr                       (rule 12)

	SELECT         shift, and enter state 4
	'('            shift, and enter state 5

	Expr           goto state 68

State 58

	Comparators -> Expr TYPE . Type                     (rule 13)

	Bool           shift, and enter state 60
	Int            shift, and enter state 61
	String         shift, and enter state 62
	Triple         shift, and enter state 63
	Sub            shift, and enter state 64
	Pred           shift, and enter state 65
	Obj            shift, and enter state 66
	Filename       shift, and enter state 67

	Type           goto state 59

State 59

	Comparators -> Expr TYPE Type .                     (rule 13)

	AND            reduce using rule 13
	OR             reduce using rule 13
	TYPE           reduce using rule 13
	','            reduce using rule 13
	')'            reduce using rule 13
	"->"           reduce using rule 13
	'>'            reduce using rule 13
	'<'            reduce using rule 13
	'='            reduce using rule 13
	"!="           reduce using rule 13
	">="           reduce using rule 13
	"<="           reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	'x'            reduce using rule 13
	%eof           reduce using rule 13


State 60

	Type -> Bool .                                      (rule 39)

	AND            reduce using rule 39
	OR             reduce using rule 39
	TYPE           reduce using rule 39
	','            reduce using rule 39
	')'            reduce using rule 39
	"->"           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'='            reduce using rule 39
	"!="           reduce using rule 39
	">="           reduce using rule 39
	"<="           reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	'x'            reduce using rule 39
	%eof           reduce using rule 39


State 61

	Type -> Int .                                       (rule 40)

	AND            reduce using rule 40
	OR             reduce using rule 40
	TYPE           reduce using rule 40
	','            reduce using rule 40
	')'            reduce using rule 40
	"->"           reduce using rule 40
	'>'            reduce using rule 40
	'<'            reduce using rule 40
	'='            reduce using rule 40
	"!="           reduce using rule 40
	">="           reduce using rule 40
	"<="           reduce using rule 40
	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	'x'            reduce using rule 40
	%eof           reduce using rule 40


State 62

	Type -> String .                                    (rule 41)

	AND            reduce using rule 41
	OR             reduce using rule 41
	TYPE           reduce using rule 41
	','            reduce using rule 41
	')'            reduce using rule 41
	"->"           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'='            reduce using rule 41
	"!="           reduce using rule 41
	">="           reduce using rule 41
	"<="           reduce using rule 41
	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	'x'            reduce using rule 41
	%eof           reduce using rule 41


State 63

	Type -> Triple .                                    (rule 42)

	AND            reduce using rule 42
	OR             reduce using rule 42
	TYPE           reduce using rule 42
	','            reduce using rule 42
	')'            reduce using rule 42
	"->"           reduce using rule 42
	'>'            reduce using rule 42
	'<'            reduce using rule 42
	'='            reduce using rule 42
	"!="           reduce using rule 42
	">="           reduce using rule 42
	"<="           reduce using rule 42
	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	'x'            reduce using rule 42
	%eof           reduce using rule 42


State 64

	Type -> Sub .                                       (rule 43)

	AND            reduce using rule 43
	OR             reduce using rule 43
	TYPE           reduce using rule 43
	','            reduce using rule 43
	')'            reduce using rule 43
	"->"           reduce using rule 43
	'>'            reduce using rule 43
	'<'            reduce using rule 43
	'='            reduce using rule 43
	"!="           reduce using rule 43
	">="           reduce using rule 43
	"<="           reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	'x'            reduce using rule 43
	%eof           reduce using rule 43


State 65

	Type -> Pred .                                      (rule 44)

	AND            reduce using rule 44
	OR             reduce using rule 44
	TYPE           reduce using rule 44
	','            reduce using rule 44
	')'            reduce using rule 44
	"->"           reduce using rule 44
	'>'            reduce using rule 44
	'<'            reduce using rule 44
	'='            reduce using rule 44
	"!="           reduce using rule 44
	">="           reduce using rule 44
	"<="           reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	'x'            reduce using rule 44
	%eof           reduce using rule 44


State 66

	Type -> Obj .                                       (rule 45)

	AND            reduce using rule 45
	OR             reduce using rule 45
	TYPE           reduce using rule 45
	','            reduce using rule 45
	')'            reduce using rule 45
	"->"           reduce using rule 45
	'>'            reduce using rule 45
	'<'            reduce using rule 45
	'='            reduce using rule 45
	"!="           reduce using rule 45
	">="           reduce using rule 45
	"<="           reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	'x'            reduce using rule 45
	%eof           reduce using rule 45


State 67

	Type -> Filename .                                  (rule 46)

	AND            reduce using rule 46
	OR             reduce using rule 46
	TYPE           reduce using rule 46
	','            reduce using rule 46
	')'            reduce using rule 46
	"->"           reduce using rule 46
	'>'            reduce using rule 46
	'<'            reduce using rule 46
	'='            reduce using rule 46
	"!="           reduce using rule 46
	">="           reduce using rule 46
	"<="           reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	'x'            reduce using rule 46
	%eof           reduce using rule 46


State 68
